<resources>
    <string name="app_name">TickBook</string>
    <string name="textview1">Source</string>
    <string name="textview2">Dest</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="name1" />
    <string name="button1">Clear</string>
    <string name="button2">Submit</string>
    <string name="name2" />
    <string name="textview3">Source</string>
    <string name="textview4">Dest</string>
    <string name="textview5">Option</string>
    <string name="textview6">Date</string>
    <string name="textview7">Time</string>
    <string name="textview8">Tick Type</string>
    <string name="textview9">-</string>
    <string name="textview10">-</string>
    <string name="textview11">-</string>
    <string name="textview12">-</string>
    <string name="textview13">-</string>
    <string name="togglebutton2">ToggleButton</string>


</resources>
